# dr_ensenso_archived

./: CMakeLists.txt  README.md  package.xml
data/: Left.yaml  Right.yaml
dr_ensenso/: CMakeLists.txt
dr_ensenso/include/dr_ensenso/: ensenso.hpp  opencv.hpp
dr_ensenso/src/: ensenso.cpp  opencv.cpp  pcl.cpp
dr_ensenso_msgs/: CMakeLists.txt  package.xml
dr_ensenso_msgs/srv/: Calibrate.srv  DetectCalibrationPattern.srv  GetCameraParams.srv  GetPatternPose.srv  InitializeCalibration.srv  SendPose.srv  SendPoseStamped.srv  SetWorkspace.srv
dr_ensenso_node/: CMakeLists.txt  package.xml
dr_ensenso_node/src/: calibrate.cpp  ensenso.cpp  fake_ensenso.cpp  timestamp.cpp  timestamp.hpp
include/dr_ensenso/: dump.hpp  eigen.hpp  ensenso.hpp  error.hpp  opencv.hpp  util.hpp
src/: dump.cpp  dump_tool.cpp  eigen.cpp  ensenso.cpp  ensenso_viewer.cpp  find_pattern.cpp  opencv.cpp  save_on_trigger.cpp  util.cpp
