<?xml version="1.0"?>
<package format="2">
	<name>dr_ensenso</name>
	<version>0.0.0</version>
	<description>The dr_ensenso package</description>

	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>dr_base</depend>
	<depend>dr_log</depend>
	<depend>dr_eigen</depend>
	<depend>dr_util</depend>
	<depend>dr_camera</depend>
	<depend>dr_opencv</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>

	<export>
	</export>
</package>
