<?xml version="1.0"?>
<package format="2">
	<name>dr_ensenso</name>
	<version>0.0.0</version>
	<description>The dr_ensenso package</description>

	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>

	<license>all-rights-reserved</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>dr_base</depend>
	<depend>dr_util</depend>
	<depend>dr_camera</depend>
	<depend>dr_pcl</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>eigen</depend>
	<depend>opencv</depend>
	<depend>pcl</depend>
	<depend>sensor_msgs</depend>
	<depend>camera_calibration_parsers</depend>
	<depend>image_geometry</depend>

	<export>
	</export>
</package>
