<?xml version="1.0"?>
<package format="2">
  <name>dr_ensenso_msgs</name>
  <version>0.0.0</version>
  <description>The ensenso_msgs package</description>

  <maintainer email="delftrobotics@todo.todo">delftrobotics</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
