<?xml version="1.0"?>
<package format="2">
	<name>dr_ensenso_node</name>
	<version>0.0.0</version>
	<description>The dr_ensenso_node package</description>

	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>

	<license>all-rights-reserved</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>dr_base</depend>
	<depend>dr_ros</depend>
	<depend>dr_util</depend>
	<depend>dr_ensenso</depend>
	<depend>dr_msgs</depend>
	<depend>dr_eigen</depend>
	<depend>pcl</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>

	<export>
	</export>
</package>
