<?xml version="1.0"?>
<package format="2">
	<name>dr_ensenso_node</name>
	<version>0.0.0</version>
	<description>ROS node for exposing Ensenso functionality over services and topics.</description>

	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>
	<author email="j.c.gaiser@delftrobotics.com">Hans Gaiser</author>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<license>all-rights-reserved</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>cv_bridge</depend>
	<depend>dr_base</depend>
	<depend>dr_eigen</depend>
	<depend>dr_ensenso</depend>
	<depend>dr_ensenso_msgs</depend>
	<depend>dr_msgs</depend>
	<depend>dr_ros</depend>
	<depend>dr_thread</depend>
	<depend>image_transport</depend>
	<depend>pcl</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>

	<export>
	</export>
</package>
